[project]
name = "stroke-api"
version = "0.1.0"
description = ""
authors = [
    {name = "GaetanCSimplon",email = "gcourtieupro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
